toolchains/eui-compiler/tests/error/baselines/text-outside-of-rootnode/expect.txt
Error: text data outside of root node
<?xml version='1.0' encoding='utf-8'?>sdf
                                      ^
at line: 1, column: 39
at file: